--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"bin-wrapper": "4.0.x",
 		"del": "3.0.x",
+		"object-path": "0.11.x",
 		"yargs": "12.0.x"
 	},
 	"devDependencies": {
