--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
     "removeComments": true,
+    "resolveJsonModule": true,
     "target": "es2017",
     "sourceMap": true
   },
