Add simple test

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+test-output
+
 # Created by https://www.toptal.com/developers/gitignore/api/node,vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,vscode
 
