--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "package",
     "dependency"
   ],
+  "type": "module",
   "exports": {
     ".": {
-      "require": "./index.js",
-      "import": "./index.esm.js"
+      "import": "./index.js"
     }
   },
-  "main": "./index.js",
-  "module": "./index.esm.js",
+  "module": "./index.js",
   "types": "./index.d.ts",
   "bin": {
     "hugo-installer": "./bin/hugo-installer.js"
