--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [12.22.1, 14.16.1, 15.14.0]
+        os: [ubuntu-20.04, windows-2019, macos-10.15]
         include:
           - os: ubuntu-20.04
           - os: windows-2019
