--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,23 +39,21 @@ jobs:
         run: npm run lint
 
   test:
-    name: Test
+    name: Test on OS ${{ matrix.os }} with NodeJS ${{ matrix.node-version }}
     needs: build
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-20.04
-          - os: windows-2019
-          - os: macos-10.15
+        node-version: [12.22.1, 14.16.1, 15.14.0]
+        os: [ubuntu-20.04, windows-2019, macos-10.15]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Setup NodeJS
+      - name: Setup NodeJS ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: 14.15.x
+          node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm ci
       - name: Build
