--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "decompress": "4.2.x",
     "del": "6.0.x",
     "got": "11.8.x",
+    "hpagent": "0.1.x",
     "object-path": "0.11.x",
     "semver": "7.3.x",
     "yargs": "16.2.x"
