--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "build:assets": "copyfiles package.json CHANGELOG.md LICENSE README.md dist",
     "build:bundle": "rollup --config rollup.config.js",
     "build:clean": "rimraf -r dist",
-    "generate-hugo-releases-meta": "ts-node ./tools/generate-hugo-releases-meta.ts",
+    "generate-hugo-releases-meta": "node --experimental-specifier-resolution=node --loader ts-node/esm ./tools/generate-hugo-releases-meta.ts",
     "lint": "eslint index.ts bin/** --max-warnings 0",
     "lint:fix": "eslint index.ts bin/** --max-warnings 0 --fix",
-    "test": "rimraf -r test-output && node dist/bin/hugo-installer --version 0.82.0 --destination test-output/hugo-0.82.0"
+    "test": "rimraf -r test-output && node dist/bin/hugo-installer --version 0.92.2 --destination test-output/hugo-0.92.2"
   },
   "dependencies": {
     "decompress": "4.2.x",
