--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v2
         with:
-          node-version: 14.15.x
+          node-version: 14.20.x
       - name: Install dependencies
         run: npm ci
       - name: Build
@@ -32,7 +32,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v2
         with:
-          node-version: 14.15.x
+          node-version: 14.20.x
       - name: Install dependencies
         run: npm ci
       - name: Lint
@@ -45,8 +45,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [12.22.1, 14.16.1, 15.14.0]
-        os: [ubuntu-20.04, windows-2019, macos-10.15]
+        # See <https://nodejs.org/en/about/releases/>
+        node-version: [14.20.0, 16.17.0, 18.9.0]
+        # See <https://github.com/actions/runner-images#available-images>
+        os: [ubuntu-22.04, windows-2022, macos-12]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
